package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module7/mod1/friends:src",
        "//src/frontend/module7/mod2/friends:src",
        "//src/frontend/module7/mod3/friends:src",
        "//src/frontend/module7/mod4/friends:src",
        "//src/frontend/module7/mod5/friends:src",
        "//src/frontend/module7/mod6/friends:src",
        "//src/frontend/module7/mod7/friends:src",
        "//src/frontend/module7/mod8/friends:src",
        "//src/frontend/module7/mod9/friends:src",
        "//src/frontend/module7/mod10/friends:src",
        "//src/frontend/module7/mod11/friends:src",
        "//src/frontend/module7/mod12/friends:src",
        "//src/frontend/module7/mod13/friends:src",
        "//src/frontend/module7/mod14/friends:src",
        "//src/frontend/module7/mod15/friends:src",
        "//src/frontend/module7/mod16/friends:src",
        "//src/frontend/module7/mod17/friends:src",
        "//src/frontend/module7/mod18/friends:src",
        "//src/frontend/module7/mod19/friends:src",
        "//src/frontend/module7/mod20/friends:src",
        "//src/frontend/module7/mod21/friends:src",
        "//src/frontend/module7/mod22/friends:src",
        "//src/frontend/module7/mod23/friends:src",
        "//src/frontend/module7/mod24/friends:src",
        "//src/frontend/module7/mod25/friends:src",
        "//src/frontend/module7/mod26/friends:src",
        "//src/frontend/module7/mod27/friends:src",
        "//src/frontend/module7/mod28/friends:src",
        "//src/frontend/module7/mod29/friends:src",
        "//src/frontend/module7/mod30/friends:src",
        "//src/frontend/module7/mod31/friends:src",
        "//src/frontend/module7/mod32/friends:src",
        "//src/frontend/module7/mod33/friends:src",
        "//src/frontend/module7/mod34/friends:src",
        "//src/frontend/module7/mod35/friends:src",
        "//src/frontend/module7/mod36/friends:src",
        "//src/frontend/module7/mod37/friends:src",
        "//src/frontend/module7/mod38/friends:src",
        "//src/frontend/module7/mod39/friends:src",
        "//src/frontend/module7/mod40/friends:src",
        "//src/model"
    ]
)
