package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module8/mod1/friends:src",
        "//src/frontend/module8/mod2/friends:src",
        "//src/frontend/module8/mod3/friends:src",
        "//src/frontend/module8/mod4/friends:src",
        "//src/frontend/module8/mod5/friends:src",
        "//src/frontend/module8/mod6/friends:src",
        "//src/frontend/module8/mod7/friends:src",
        "//src/frontend/module8/mod8/friends:src",
        "//src/frontend/module8/mod9/friends:src",
        "//src/frontend/module8/mod10/friends:src",
        "//src/frontend/module8/mod11/friends:src",
        "//src/frontend/module8/mod12/friends:src",
        "//src/frontend/module8/mod13/friends:src",
        "//src/frontend/module8/mod14/friends:src",
        "//src/frontend/module8/mod15/friends:src",
        "//src/frontend/module8/mod16/friends:src",
        "//src/frontend/module8/mod17/friends:src",
        "//src/frontend/module8/mod18/friends:src",
        "//src/frontend/module8/mod19/friends:src",
        "//src/frontend/module8/mod20/friends:src",
        "//src/frontend/module8/mod21/friends:src",
        "//src/frontend/module8/mod22/friends:src",
        "//src/frontend/module8/mod23/friends:src",
        "//src/frontend/module8/mod24/friends:src",
        "//src/frontend/module8/mod25/friends:src",
        "//src/frontend/module8/mod26/friends:src",
        "//src/frontend/module8/mod27/friends:src",
        "//src/frontend/module8/mod28/friends:src",
        "//src/frontend/module8/mod29/friends:src",
        "//src/frontend/module8/mod30/friends:src",
        "//src/frontend/module8/mod31/friends:src",
        "//src/frontend/module8/mod32/friends:src",
        "//src/frontend/module8/mod33/friends:src",
        "//src/frontend/module8/mod34/friends:src",
        "//src/frontend/module8/mod35/friends:src",
        "//src/frontend/module8/mod36/friends:src",
        "//src/frontend/module8/mod37/friends:src",
        "//src/frontend/module8/mod38/friends:src",
        "//src/frontend/module8/mod39/friends:src",
        "//src/frontend/module8/mod40/friends:src",
        "//src/model"
    ]
)
