package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module9/mod1/friends:src",
        "//src/frontend/module9/mod2/friends:src",
        "//src/frontend/module9/mod3/friends:src",
        "//src/frontend/module9/mod4/friends:src",
        "//src/frontend/module9/mod5/friends:src",
        "//src/frontend/module9/mod6/friends:src",
        "//src/frontend/module9/mod7/friends:src",
        "//src/frontend/module9/mod8/friends:src",
        "//src/frontend/module9/mod9/friends:src",
        "//src/frontend/module9/mod10/friends:src",
        "//src/frontend/module9/mod11/friends:src",
        "//src/frontend/module9/mod12/friends:src",
        "//src/frontend/module9/mod13/friends:src",
        "//src/frontend/module9/mod14/friends:src",
        "//src/frontend/module9/mod15/friends:src",
        "//src/frontend/module9/mod16/friends:src",
        "//src/frontend/module9/mod17/friends:src",
        "//src/frontend/module9/mod18/friends:src",
        "//src/frontend/module9/mod19/friends:src",
        "//src/frontend/module9/mod20/friends:src",
        "//src/frontend/module9/mod21/friends:src",
        "//src/frontend/module9/mod22/friends:src",
        "//src/frontend/module9/mod23/friends:src",
        "//src/frontend/module9/mod24/friends:src",
        "//src/frontend/module9/mod25/friends:src",
        "//src/frontend/module9/mod26/friends:src",
        "//src/frontend/module9/mod27/friends:src",
        "//src/frontend/module9/mod28/friends:src",
        "//src/frontend/module9/mod29/friends:src",
        "//src/frontend/module9/mod30/friends:src",
        "//src/frontend/module9/mod31/friends:src",
        "//src/frontend/module9/mod32/friends:src",
        "//src/frontend/module9/mod33/friends:src",
        "//src/frontend/module9/mod34/friends:src",
        "//src/frontend/module9/mod35/friends:src",
        "//src/frontend/module9/mod36/friends:src",
        "//src/frontend/module9/mod37/friends:src",
        "//src/frontend/module9/mod38/friends:src",
        "//src/frontend/module9/mod39/friends:src",
        "//src/frontend/module9/mod40/friends:src",
        "//src/model"
    ]
)
