package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["friends.tsx", "friend-service.ts"],
    deps = [
        "//src/frontend/module5/mod22/friends/friend1:src",
        "//src/frontend/module5/mod22/friends/friend2:src",
        "//src/frontend/module5/mod22/friends/friend3:src",
        "//src/frontend/module5/mod22/friends/friend4:src",
        "//src/frontend/module5/mod22/friends/friend5:src",
        "//src/frontend/module5/mod22/friends/friend6:src",
        "//src/frontend/module5/mod22/friends/friend7:src",
        "//src/frontend/module5/mod22/friends/friend8:src",
        "//src/frontend/module5/mod22/friends/friend9:src",
        "//src/frontend/module5/mod22/friends/friend10:src",
        "//src/model",
        "//src/frontend/config"
    ]
)
